<resources>
    <string name="app_name">Intenciones</string>
    <string name="activity">Activity</string>
    <string name="link">link</string>
    <string name="imagen">imagen</string>
    <string name="holiii">Holiii</string>
    <string name="volver">volver</string>
    <string name="audio">audio</string>
    <string name="video">video</string>
    <string name="numero_de_cell">numero de cell</string>
    <string name="josef_ssj5_gmail">josef.ssj5@gmail</string>
</resources>